Fixed order of posts new to old

--- a/PostitcardService/wwwroot/index.html
+++ b/PostitcardService/wwwroot/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="row">
         <ul id="messagesList"></ul>
-        <p id="printText"></p>
+        <div id="printText"></div>
     </div>
 <script src="js/signalr/dist/browser/signalr.js"></script>
 <script src="js/chat.js"></script>
