Added remove and add function for postitcard

--- a/PostitcardService/wwwroot/index.html
+++ b/PostitcardService/wwwroot/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/site.css">
 </head>
 <body onload="PrintAllPostitcards()">
+<!-- <body> -->
 
     <div class="container">
         <div class="row">&nbsp;</div>
